[package]
name = "s2kv"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.7.9"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
derivative = "2.2.0"
eyre = "0.6.12"
futures = "0.3.31"
humantime = "2.1.0"
ordered-float = { version = "4.6.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
streamstore = "0.6.0"
thiserror = "1.0.69"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
